# craftos-base

./: CMakeLists.txt  LICENSE  README.md
example/: CMakeLists.txt  craftos-lite.c
include/: craftos.h  craftos_fatfs.h  craftos_tmpfs.h
src/: config.h.in  event.c  funcs.c  machine.c  mmfs.c  mmfs.h  string_list.c  string_list.h  terminal.c  terminal.h  tmpfs.c  types.h
src/apis/: fs.c  fs_handle.c  http.c  http_handle.c  os.c  peripheral.c  redstone.c  term.c
